[package]
name = "generative_nodes"
version = "0.1.0"
authors = ["Lucas RiedlShah <lucasp.riedlshah@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anymap = "0.12.1"
nalgebra = "0.25.4"

[dependencies.druid]
version = "0.7.0"
features = ["im"]
git = "https://github.com/linebender/druid"